[Niraj]Refactor:Scala spark codes to include test case for testing python model

--- a/Kafka/RealTimeStockPrediction/log4j.properties
+++ b/Kafka/RealTimeStockPrediction/log4j.properties
@@ -9,6 +9,7 @@ log4j.appender.console.layout.ConversionPattern=%d{yy/MM/dd HH:mm:ss} %p %c{1}: 
 
 #application log
 log4j.logger.SparkStructuredStreaming=INFO, console
+log4j.logger.Producer=INFO, console
 log4j.additivity=false
 
 #define following in Java System
