--- a/Kafka/RealTimeStockPrediction/log4j.properties
+++ b/Kafka/RealTimeStockPrediction/log4j.properties
@@ -8,9 +8,10 @@ log4j.appender.console.layout=org.apache.log4j.PatternLayout
 log4j.appender.console.layout.ConversionPattern=%d{yy/MM/dd HH:mm:ss} %p %c{1}: %m%n
 
 #application log
-log4j.logger.SparkStructuredStreaming=INFO, console
+log4j.logger.SparkStructuredStreaming = INFO, console
 log4j.logger.Producer=INFO, console
-log4j.additivity=false
+log4j.additivity.SparkStructuredStreaming =false
+log4j.additivity.Producer=false
 
 #define following in Java System
 # -Dlog4j.configuration=file:log4j.properties
