--- a/DockerFiles/DockerSpark/docker-compose.yml
+++ b/DockerFiles/DockerSpark/docker-compose.yml
@@ -1,8 +1,39 @@
-version: '2'
+version: '3'
 
 services:
+  zookeeper:
+    image: 'bitnami/zookeeper:latest'
+    ports:
+      - '2181:2181'
+    environment:
+      - ALLOW_ANONYMOUS_LOGIN=yes
+  kafka:
+    image: wurstmeister/kafka
+    container_name: kafka
+    ports:
+    - 9092:9092
+    environment:
+      KAFKA_ADVERTISED_HOST_NAME: localhost
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+    depends_on:
+    - zookeeper
+   
+  
   spark:
    build:
-    dockerfile: DockerFile
+    dockerfile: DockerFileSpark
     context: .
+   depends_on:
+    - kafka
+   environment:
+      - SPARK_MODE=master
+      - SPARK_RPC_AUTHENTICATION_ENABLED=no
+      - SPARK_RPC_ENCRYPTION_ENABLED=no
+      - SPARK_LOCAL_STORAGE_ENCRYPTION_ENABLED=no
+      - SPARK_SSL_ENABLED=no
+   ports:
+      - '8080:8080'
+      
+   
+   
 
