--- a/DockerFiles/DockerSpark/DockerFileSpark
+++ b/DockerFiles/DockerSpark/DockerFileSpark
@@ -1,17 +1,11 @@
-FROM bitnami/spark
-USER root
+FROM savedimage/dockerspark
 
-RUN apt-get update && apt install gnupg -y && \ 
-	echo "deb https://dl.bintray.com/sbt/debian /" |  tee -a /etc/apt/sources.list.d/sbt.list && \
- 	apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv 642AC823 && \
- 	apt-get update && \
- 	apt-get install sbt -y
 
 
 WORKDIR /app
 COPY StockPredictionStructuredStreaming /app/StockPredictionStructuredStreaming
 
-RUN sbt update && sbt compile && sbt test && sbt package
+
 
 
 
