--- a/DockerFiles/DockerSpark/docker-compose.yml
+++ b/DockerFiles/DockerSpark/docker-compose.yml
@@ -11,15 +11,23 @@ services:
     container_name: kafka
     ports:
     - 9092:9092
+    
     environment:
-      KAFKA_ADVERTISED_HOST_NAME: localhost
+      KAFKA_LISTENERS: PLAINTEXT://:9092
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://localhost:9092
+      KAFKA_BROKER_ID: 1
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
       KAFKA_CREATE_TOPICS: "kafkatutorial:1:1"
+      ALLOW_PLAINTEXT_LISTENER: "yes"
+      SSL: localhost:9092
+    expose:
+     - 9092
       
   spark:
    build:
     dockerfile: DockerFileSpark
     context: .
+
    
    environment:
       - SPARK_MODE=master
@@ -27,6 +35,7 @@ services:
       - SPARK_RPC_ENCRYPTION_ENABLED=no
       - SPARK_LOCAL_STORAGE_ENCRYPTION_ENABLED=no
       - SPARK_SSL_ENABLED=no
+   
    ports:
       - '8080:8080'
    links:
